# cmake-demo

./: .gitignore  CMakeLists.txt  README.md  build_deb.sh  build_rpm.sh  cmake-demo.spec  demoapp.c  demolib.c  demolib.h  rebuild_cmake_linux.sh
.tito/: tito.props
debian/: changelog  control  rules
